- Random number generation: add Dirichlet and generic discrete
  distributions
- "summary" command with --by option: provide a $result matrix
  if the list argument contains a single series, and improve
  the format of the printout
- "corr" command: be more explicit about the sample(s) used
- "rename" command: add a --case option to support case
  conversion of all series names in the dataset
- matrix "left division" operator: improve efficiency when the
  left-hand operand is triangular
- Fix bug: append via console not updating series list in the
  main gretl window
- Fix bug: console command-line broken following use of "printf"
  with no newline in the format
- Fix bug in "corrgm" command: spurious significance stars shown
  for the PACF when the --bartlett option is given
- Fix bug in "adf" command (without the --gls option): error if
  all of --c, --nc, --ct and --ctt were given
- Fix a lacuna in type-checking of hansl statements
- GUI: support the fixed-sample option when appending data
- GUI: random effects panel model: fix breakage in selecting
  the --nerlove option
- GUI: support the --by option for the "summary" command, when
  called via the main-window "View" menu
- GUI: fix the "Numerical summary" option in a window showing
  a factorized boxplot (was broken for a string-valued factor)
- GUI: ensure that the "Compact data" and "Expand data" menu
  items are disabled when the dataset is cross-sectional
- Windows 64-bit build: make Consolas the default monospace
  font
- Fix bad behavior from "set force_decpoint off" for users in
  a locale that normally uses decimal comma but who choose not
  to use it
- Fix incorrect handling of ctrl-r (carriage return) in some
  cases of script output
- Fix GUI language selection on recent macOS

2024-05-21 version 2024b
- "gridplot" command: add a --title option
- "clear" command: add an --all option
- instrings() function: add optional boolean argument to get
  a simple boolean return value